--- a/deployment/performance-dashboard-on-aws.template
+++ b/deployment/performance-dashboard-on-aws.template
@@ -2,7 +2,7 @@
   "AWSTemplateFormatVersion": "2010-09-09",
   "Description": "(SO0157) Performance Dashboard on AWS Solution Implementation v1.0.0",
   "Parameters": {
-    "adminEmail": {
+    "AdminEmail": {
       "Type": "String",
       "Description": "Email address for the admin user",
       "MinLength": 5
@@ -15,7 +15,7 @@
         "TemplateURL": {"Fn::Sub" : "https://%%BUCKET_NAME%%-${AWS::Region}.s3.amazonaws.com/%%SOLUTION_NAME%%/%%VERSION%%/Auth.template"},
         "TimeoutInMinutes": "60",
         "Parameters": {
-          "adminEmail": {"Ref" : "adminEmail"}
+          "adminEmail": {"Ref" : "AdminEmail"}
         }
       }
     },
